Clearing commits